# brickene

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELETE_ME.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt  start.sh  user.sqlite3
.github/: copilot-instructions.md
assets/: brick_configs.json
brickene/: __init__.py  __main__.py  brick_store.py  render_server.py
brickene/.github/: PULL_REQUEST_TEMPLATE.md
brickene/.github/ISSUE_TEMPLATE/: question.md
brickene/assets/: convert_raw_brick_smiles.py  raw_brick_smiles.json
brickene/controller/: __init__.py  render_controller.py
brickene/core/: network.py  node.py  rendering.py
brickene/database/: __init__.py  reader.py
brickene/dto/: __init__.py  frontend_payload.py
brickene/frontend/: app.js  iframe-example-small.html  iframe-example.html  index.html  node_manager.css  node_manager.html  node_manager.js  node_wizard.css  node_wizard.html  node_wizard.js  shortcuts.json  styles.css  template_wizard.css  template_wizard.html  template_wizard.js
brickene/frontend/assets/: brick_configs.json  convert_raw_brick_smiles.py  debug.py  debug2.py  raw_brick_smiles.json  render_bricks.py  sync_system_bricks.py
brickene/frontend/assets/brick_images/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+24 more)
brickene/frontend/assets/debug_outputs/: 2-ports.json  60-ports.json
brickene/frontend/scripts/: brick-configs.js  canvas.js  edges.js  geometry.js  menu.js  nodes.js  persistence.js  render-layer.js  shortcuts.js  state.js
brickene/model/: __init__.py  brick.py  network.py
brickene/render/: __init__.py
brickene/repository/: __init__.py  brick_repository.py
brickene/service/: __init__.py  brick_service.py  render_service.py  rendering.py
docker/: README.md
docs/: README.md  index.md
docs/.vitepress/: config.mts
docs/api/: examples.md  index.md
docs/guide/: embedding.md  index.md  installation.md
tests/: conftest.py  test_backend_interfaces.py  test_iframe_scale.py  test_interactions.py  test_smiles_input.py  test_template_wizard.py
tests/test_example/: test_hello.py
