# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brickene"
version = "0.3.1"
description = "brickene – A flow-graph based visual builder for block-assembled organic molecules."
readme = "README.md"
authors = ["none <zhichen_xu@outlook.com>"]
license = "MIT"
repository = "https://github.com/ConicalBanana/brickene"
homepage = "https://github.com/ConicalBanana/brickene"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11.15",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"brickene" = "brickene.__main__:app"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "3.11.15"

typer = {extras = ["all"], version = "^0.4.0"}
rich = "^10.13.0"
rdkit = "2022.9.5"
networkx = ">=3.4.2,<3.5"
numpy = "<2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-html = "^4.1.1"
pytest-cov = "^5.0.0"
bandit = "^1.7.10"
ruff = "^0.7.2"
pre-commit = "^2.21.0"
coverage = "^7.2.7"
coverage-badge = "^1.1.0"



[tool.ruff]
# https://beta.ruff.rs/docs/settings/
# https://docs.astral.sh/ruff/configuration/
line-length = 88

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
respect-gitignore = true

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
extend-select = ["I"]
exclude = ["*.ipynb"]
ignore = ["F401"]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
exclude = ["*.ipynb"]
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["brickene", "tests"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.darglint]
strictness = "short"
docstring_style = "google"
